<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout android:layout_marginLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView android:text="@string/firstName"
            android:layout_width="100dp"
            android:layout_height="wrap_content" />
    <EditText android:id="@+id/teacher_first_name_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
        </LinearLayout>
    <LinearLayout android:layout_marginLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView android:text="@string/lastName"
            android:layout_width="100dp"
            android:layout_height="wrap_content" />
        <EditText android:id="@+id/teacher_last_name_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout android:layout_marginLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView android:text="@string/title"
            android:layout_width="100dp"
            android:layout_height="wrap_content" />
        <EditText android:id="@+id/teacher_title_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout android:layout_marginLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView android:text="@string/email"
            android:layout_width="100dp"
            android:layout_height="wrap_content" />
        <EditText android:id="@+id/teacher_email_edittext"
            android:inputType="textEmailAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout android:layout_marginLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView android:text="@string/tel"
            android:layout_width="100dp"
            android:layout_height="wrap_content" />
        <EditText android:id="@+id/teacher_tel_edittext"
            android:inputType="phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>