<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <ImageButton
                android:background="@color/white"
                android:layout_gravity="center"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_assistant_photo_black_24dp" />
            <TextView android:layout_marginLeft="25dp"
                android:layout_width="100dp"
                android:layout_gravity="center_vertical"
                android:layout_height="wrap_content" android:text="@string/add_demande_type"/>

            <Spinner
                android:layout_gravity="center_vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinner_year"
                android:entries="@array/demande"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <ImageButton
                android:background="@color/white"
                android:layout_gravity="center"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_date_range_black_24dp"/>

            <TextView android:layout_marginLeft="25dp"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/Date"
                android:layout_gravity="center_vertical"

                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/selectionnezDate"
                android:id="@+id/DatePub"
                android:layout_gravity="center_vertical"

                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:orientation="horizontal"
            >

            <EditText
               android:layout_marginLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:id="@+id/editText"
                android:hint="@string/Notes"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            >


            <ImageView
                android:layout_gravity="right"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginBottom="25dp"
                android:layout_marginRight="25dp"
                app:srcCompat="@drawable/send_icon"
                android:id="@+id/imageView" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>