<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    >

    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton android:src="@drawable/ic_event_note_black_24dp"
            android:background="@color/white"
            android:layout_gravity="center"
            android:layout_width="48dp"
            android:layout_height="48dp" />
        <TextView
            android:layout_width="150dp" android:text="@string/Date"
            android:layout_gravity="center_vertical"
            android:layout_height="wrap_content" />
        <TextView android:id="@+id/demande_dateCreation"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:background="@color/white"
            android:layout_gravity="center"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_assistant_photo_black_24dp" />

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/response_type" />

        <TextView
            android:id="@+id/demande_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:background="@color/white"
            android:layout_gravity="center"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_date_range_black_24dp"/>

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/delivery_date" />

        <TextView
            android:id="@+id/demande_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="8dp"
        android:layout_weight="1">

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:id="@+id/editText"
            android:hint="@string/Notes"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >


        <ImageButton
            android:layout_marginTop="270dp"
            android:layout_gravity="right"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_near_me_black_24dp"
             />
    </LinearLayout>
    </LinearLayout>
    </LinearLayout>
