<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="1dp"
    card_view:cardElevation="1dp"
    card_view:cardUseCompatPadding="true">
            <LinearLayout android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                >

                <LinearLayout android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageButton android:src="@drawable/ic_assignment_black_24dp"
                        android:background="@color/white"
                        android:layout_gravity="center"
                        android:layout_width="48dp"
                        android:layout_height="48dp" />
                    <TextView
                        android:layout_width="50dp" android:text="@string/title"
                        android:layout_gravity="center_vertical"
                        android:layout_height="wrap_content" />
                    <TextView android:id="@+id/demande_titre"
                        android:layout_gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageButton
                        android:background="@color/white"
                        android:layout_gravity="center"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:src="@drawable/ic_date_range_black_24dp" />

                    <TextView
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/date" />

                    <TextView
                        android:id="@+id/demande_dateCreation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageButton
                        android:background="@color/white"
                        android:layout_gravity="center"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:src="@drawable/ic_vector_name"/>

                    <TextView
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/status" />

                    <TextView
                        android:id="@+id/demande_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        />
                </LinearLayout>
                <LinearLayout android:id="@+id/demande_dateLivraison_linear_layout"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageButton
                        android:background="@color/white"
                        android:layout_gravity="center"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:src="@drawable/ic_event_availabke_black" />

                    <TextView
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/dateLivraison" />

                    <TextView
                        android:id="@+id/demande_dateLivraison"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        />
                </LinearLayout>
            </LinearLayout>
</android.support.v7.widget.CardView>
